LPS-90584 Avoid extra padding in the detail view

--- a/modules/apps/blogs/blogs-web/src/main/resources/META-INF/resources/blogs/css/main.scss
+++ b/modules/apps/blogs/blogs-web/src/main/resources/META-INF/resources/blogs/css/main.scss
@@ -294,6 +294,10 @@
 		margin-bottom: 1.25rem;
 	}
 
+	.widget-mode-detail {
+		padding-top: 0.5rem;
+	}
+
 	.widget-mode-simple {
 		margin-top: 24px;
 	}
